replaced get(then.size() - 1) with then.getLast() since it used to get last value, and it's clearer to use it directly for var returnType